--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Rubik&family=Secular+One&display=swap"rel="stylesheet"/>
-    <link rel="stylesheet" href="./src/css/reset.css">
-    <link rel="stylesheet" href="./src/css/estilo.css">
-    <link rel="stylesheet" href="./src/css/responsivo.css">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Rubik&family=Secular+One&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./src/css/reset.css" />
+    <link rel="stylesheet" href="./src/css/estilo.css" />
+    <link rel="stylesheet" href="./src/css/responsivo.css" />
     <title>One Piece</title>
   </head>
   <body>
@@ -21,8 +24,8 @@
         />
         <div class="conteudo">
           <i class="logo"></i>
-          <h2 class="nome-personagem">tony chopper</h2>
-          <p class="descricao"></p>
+          <h2 class="nome-personagem">Tony Chopper</h2>
+          <p class="descricao">Esta pequena rena ganhou a habilidade de mudar sua forma e de pensar como humanos após comer a fruta Hito Hito no Mi. Chopper é um valioso membro da tripulação dos Piratas do Chapéu de Palha, atuando como médico da tripulação.</p>
         </div>
       </div>
 
@@ -34,8 +37,8 @@
         />
         <div class="conteudo">
           <i class="logo"></i>
-          <h2 class="nome-personagem">roronoa zoro</h2>
-          <p class="descricao"></p>
+          <h2 class="nome-personagem">Roronoa Zoro</h2>
+          <p class="descricao">Primeiro pirata (segundo membro se contarmos com Luffy) a se juntar à tripulação de Piratas do Chapéu de Palha, Zoro aceitou o convite de Luffy após o capitão salvar sua vida.</p>
         </div>
       </div>
 
@@ -48,12 +51,7 @@
         <div class="conteudo">
           <i class="logo"></i>
           <h2 class="nome-personagem">monkey d luffy</h2>
-          <p class="descricao">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur
-            temporibus voluptatum asperiores magnam architecto dolorum totam
-            dicta libero, adipisci animi aut perferendis tempore at molestiae
-            doloribus sequi unde illum quibusdam.
-          </p>
+          <p class="descricao">Luffy do Chapéu de Palha", como ficou conhecido, é o protagonista do anime, e o fundador e capitão da tripulação Piratas do Chapéu de Palha. Desde muito jovem, tem como seu maior sonho um dia encontrar o lendário tesouro de Gol D. Roger, para se tornar o novo Rei dos Piratas.</p>
         </div>
       </div>
 
@@ -65,13 +63,8 @@
         />
         <div class="conteudo">
           <i class="logo"></i>
-          <h2 class="nome-personagem">nami</h2>
-          <p class="descricao">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur
-            temporibus voluptatum asperiores magnam architecto dolorum totam
-            dicta libero, adipisci animi aut perferendis tempore at molestiae
-            doloribus sequi unde illum quibusdam.
-          </p>
+          <h2 class="nome-personagem">Nami</h2>
+          <p class="descricao">Uma órfã de guerra, ainda criança Nami foi adotada por Bell-mère, uma mulher da Marinha. Enquanto crescia ao lado de sua irmã adotiva Nojiko, Nami já demonstrava sua paixão por desenhar mapas, sonhando em um dia fazer o mapa de todo o mundo.</p>
         </div>
       </div>
 
@@ -83,16 +76,12 @@
         />
         <div class="conteudo">
           <i class="logo"></i>
-          <h2 class="nome-personagem">sanji</h2>
-          <p class="descricao">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur
-            temporibus voluptatum asperiores magnam architecto dolorum totam
-            dicta libero, adipisci animi aut perferendis tempore at molestiae
-            doloribus sequi unde illum quibusdam.
-          </p>
+          <h2 class="nome-personagem">Sanji</h2>
+          <p class="descricao">Também conhecido como "Perna Negra" Sanji, este pirata foi o quinto a integrar a tripulação de Luffy. Suas ações como pirata lhe renderam a terceira maior recompensa entre os membros do Chapéu de Palha, além de atuar como cozinheiro oficial do grupo.</p>
         </div>
       </div>
     </main>
+    
     <ul class="botoes">
       <li>
         <button class="botao">
@@ -133,5 +122,6 @@
         </button>
       </li>
     </ul>
+<script src="./src/js/index.js"></script>
   </body>
 </html>
