--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<link rel="stylesheet" href="./src/css/estilo.css" />
 		<link rel="stylesheet" href="./src/css/responsivo.css" />
 
-		<title>One Piece - Semana do Zero ao Programador Contratado</title>
+		<title>One Piece</title>
 	</head>
 
 	<body>
@@ -40,7 +40,7 @@
 				<div class="conteudo">
 					<i class="logo"></i>
 					<h2 class="nome-personagem">Monkey D. Luffy</h2>
-					<p class="descricao">Luffy do Chapéu de Palha", como ficou conhecido, é o protagonista do anime, e o fundador e capitão da tripulação Piratas do Chapéu de Palha. Desde muito jovem, tem como seu maior sonho um dia encontrar o lendário tesouro de Gol D. Roger, para se tornar o novo Rei dos Piratas.</p>
+					<p class="descricao">Luffy do Chapéu de Palha, como ficou conhecido, é o protagonista do anime, e o fundador e capitão da tripulação Piratas do Chapéu de Palha. Desde muito jovem, tem como seu maior sonho um dia encontrar o lendário tesouro de Gol D. Roger, para se tornar o novo Rei dos Piratas.</p>
 				</div>
 			</div>
 
